--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,4 +37,4 @@ jobs:
     - name: Run tests
       run: |
         source .venv/bin/activate
-        python -m pytest -v
+        python -m pytest --cov-report xml
