--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/python-bad-project:${{ github.ref_name }}
+          tags: ghcr.io/cosmo-tech/python-bad-project:${{ github.ref_name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
