--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,2 @@
 sonar.projectKey=python-bad-project
-
-# Source code settings
-sonar.sources=src
-sonar.tests=tests
+sonar.exclusions=src/bugs,src/code_smels
