--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "python-bad-project"
-version = "0.3.0"
+version = "0.4.0"
 description = "A project with intentional vulnerabilities for testing purposes"
 readme = "README.md"
-requires-python = ">=3.7,<3.8"  # Python 3.7 specifically due to TensorFlow 1.14.0 compatibility
+requires-python = ">=3.8,<3.9"
 license = {text = "MIT"}
 authors = [
     {name = "Project Author", email = "diamantis.sellis@cosmotech.com"}
@@ -18,14 +18,14 @@ dependencies = [
     "django==2.2.0", # Multiple CVEs including SQL injection vulnerabilities
     "flask==0.12.3", # Multiple CVEs including security issues
     "cryptography==2.8", # Older version with known vulnerabilities
-    "requests==2.20.0", # Several CVEs including security issues
+    "requests==2.21.0", # Updated for tensorflow 2.3.0 compatibility
     "pillow==6.2.0", # Multiple CVEs including memory corruption vulnerabilities
     "pyyaml==5.1", # Code execution vulnerability
     "jinja2==2.9.6", # Server-side template injection vulnerability, compatible with Flask 0.12.3
     # Database dependencies
     "sqlalchemy==1.3.0", # SQL injection vulnerabilities
     "pymongo==3.7.0", # Older version with security issues
-    "mysql-connector-python==8.0.18", # Compatible with Python 3.7, used in sql_injection.py
+    "mysql-connector-python>=8.0.22", # Updated for Python 3.8 compatibility
     # Web framework dependencies
     "werkzeug==0.14.1", # Security issues, compatible with Flask 0.12.3
     "tornado==5.0.2", # Security vulnerabilities
@@ -35,9 +35,8 @@ dependencies = [
     # Dependencies with various licenses for license compliance testing
     "matplotlib==3.0.3", # GPL-compatible license
     "chardet==3.0.4", # LGPL license
-    "numpy==1.16.6", # MIT license, compatible with TensorFlow 1.14.0
     "pandas==0.25.3", # BSD license
-    "tensorflow==1.14.0", # Apache 2.0 license, only compatible with Python 3.7 and below
+    "tensorflow==2.3.0", # Compatible with werkzeug 0.14.1 and Python 3.8
     # Security-related dependencies
     "argon2-cffi==19.2.0", # For secure password hashing, compatible with Python 3.7
 ]
@@ -45,15 +44,15 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     # Development dependencies
-    "pytest==4.6.11",  # Older version
-    "pylint==2.3.1",  # Older version
+    "pytest>=6.0.0",  # Updated for Python 3.8 compatibility
+    "pylint>=2.6.0",  # Updated for Python 3.8 compatibility
     "pytest-cov>=4.1.0",
 ]
 
 [tool.setuptools]
 packages = ["src"]
 
-[tool.pytest]
+[tool.pytest.ini_options]
 testpaths = ["tests"]
 
 [tool.pylint]
